--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <nav>
         <img src="images/logo.png" alt="logo">
-        <h1>BLAZER</h1>
+        <h1>GALLIUM</h1>
     </nav>
 
     <div class="featured">
-        <h1>Popular:</h1>
+        <h1>Games</h1>
         <div class="column">
           <a href="games/bob-the-robber-2/">
             <img src="images/bob-the-robber-2.png">
